tailwind css link fix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SponsorMe acts as a bridge between the sponsor (i.e. you) and the children in need of assistance. We work with Child Welfare Centers and various NGO's to identify children in need of assistance to pursue quality education. We negotiate with good schools in the area to admit these children at special rates. We also work with the NGO or CWC to ensure that the children get adequate bridge courses and after-school assistance to cope up.">
-    <link rel="stylesheet" href="tailwind.min.css" integrity="sha512-RntatPOhEcQEA81gC/esYoCkGkL7AYV7TeTPoU+R9zE44/yWxVvLIBfBSaMu78rhoDd73ZeRHXRJN5+aPEK53Q==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="tailwind.min.css" />
     <title>Help Educate a Child in India - Sponsor Me</title>
 </head>
 <body class="antialiased bg-body text-body font-body">
@@ -201,13 +201,14 @@ A/C# : 33848002975, IFSC: SBIN0040784</p>
           <div class="max-w-md mx-auto text-center">
             <a class="inline-block mb-6 mx-auto text-3xl font-bold leading-none" href="#"><img src="logo.png" alt="" width="NaN"></a>
             <p class="mb-6 text-sm font-semibold text-gray-400">&copy; Nila Educational Trust</p>
+            <p class="mb-6 text-sm font-semibold text-gray-400">Made with &#x2764; by <a href="https://i47.in">i47 Labs</a></p>
           </div>
         </div>
       </section>
     </div>
     <script type="text/javascript">
         var i47 = {};
-        var bg = ti = 0;
+        var ti = 0;
         i47.headers = [];
         i47.headers.push({ title: 'SponsorMe helps <br />at-risk children <span class="text-pink-600">#StayInSchool</span>', note: '95% of our children are from Goverment sponsored shelter homes catering to orphaned, abused, trafficked or otherwise at-risk children. Education can give them a future of dignity.' });
         i47.headers.push({ title: 'We find a child,<br /><span class="text-pink-600">you ensure</span> her a better tomorrow', note: 'We identify the children purely based on financial need and willingness to study. With your help they can fly.' });
@@ -219,10 +220,8 @@ A/C# : 33848002975, IFSC: SBIN0040784</p>
             document.getElementById('note').innerText = i47.headers[ti].note;
             if (++ti > 4) ti = 0;
         };
-
-        var i = 1;
         i47.switchTitle();
-        window.setInterval(i47.switchTitle, 5000);
+        window.setInterval(i47.switchTitle, 8000);
     </script>
 </body>
 </html>
