added missing cta links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   </div>
                   <div class="max-w-sm mx-auto lg:mx-0">
                     <p class="mb-6 text-gray-400 leading-loose">We are a fully volunteer-driven organization, where the compliance and awareness related expenses are borne internally. Every bit of donation you give is spent on the children you sponsor.</p>
-                    <div><a class="inline-block mb-3 lg:mb-0 lg:mr-3 w-full lg:w-auto py-2 px-6 leading-loose bg-purple-600 hover:bg-purple-700 text-white font-semibold rounded-l-xl rounded-t-xl transition duration-200" href="#">Help a Child</a><a class="inline-block w-full lg:w-auto py-2 px-6 leading-loose font-semibold bg-white hover:bg-gray-50 rounded-l-xl rounded-t-xl transition duration-200" href="#">Learn More</a></div>
+                    <div><a class="inline-block mb-3 lg:mb-0 lg:mr-3 w-full lg:w-auto py-2 px-6 leading-loose bg-purple-600 hover:bg-purple-700 text-white font-semibold rounded-l-xl rounded-t-xl transition duration-200" href="#your-support">Help a Child</a><a class="inline-block w-full lg:w-auto py-2 px-6 leading-loose font-semibold bg-white hover:bg-gray-50 rounded-l-xl rounded-t-xl transition duration-200" href="#the-plan">Learn More</a></div>
                   </div>
                 </div>
               </div>
