--- a/index.html
+++ b/index.html
@@ -16,27 +16,30 @@
         <nav class="relative px-6 py-6 flex justify-between items-center bg-gray-50">
           <img src="logo.png" alt="SponsorMe Logo" width="172">
           <ul class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#the-plan">The Plan</a></li>
+            <li><a class="topmenu" href="#the-plan">The Plan</a></li>
             <li class="text-gray-200"><svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"></path></svg></li>
-            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#our-promise">Our Promise</a></li>
+            <li><a class="topmenu" href="#our-promise">Our Promise</a></li>
             <li class="text-gray-200"><svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"></path></svg></li>
-            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#your-support">Your Support</a></li>
+            <li><a class="topmenu" href="#your-support">Your Support</a></li>
           </ul><a class="hidden lg:block py-2 px-6 bg-white hover:bg-gray-50 text-sm text-purple-600 font-bold rounded-l-xl rounded-t-xl transition duration-200" href="tel:+919880771177">Call Us</a>
-        </nav><div class="bg-gray-50 pt-20 pb-20 radius-for-skewed">
+        </nav><div class="bg-gray-50 py-20">
           <div class="container mx-auto px-4">
             <div class="flex flex-wrap -mx-4">
               <div class="w-full lg:w-1/2 px-4 mb-12 md:mb-20 lg:mb-0 flex items-center">
                 <div class="w-full text-center lg:text-left">
                   <div class="max-w-md mx-auto lg:mx-0">
-                    <h2 class="mb-3 text-4xl lg:text-5xl font-bold font-heading">
+                    <h2 class="mb-3">
                       <span>100% to the child</span>
-                      <span class="text-purple-600">not a penny</span>
+                      <span class="text-pink-600">not a penny</span>
                       <span>to administration</span>
                     </h2>
                   </div>
                   <div class="max-w-sm mx-auto lg:mx-0">
-                    <p class="mb-6 text-gray-400 leading-loose">We are a fully volunteer-driven organization, where the compliance and awareness related expenses are borne internally. Every bit of donation you give is spent on the children you sponsor.</p>
-                    <div><a class="inline-block mb-3 lg:mb-0 lg:mr-3 w-full lg:w-auto py-2 px-6 leading-loose bg-purple-600 hover:bg-purple-700 text-white font-semibold rounded-l-xl rounded-t-xl transition duration-200" href="#your-support">Help a Child</a><a class="inline-block w-full lg:w-auto py-2 px-6 leading-loose font-semibold bg-white hover:bg-gray-50 rounded-l-xl rounded-t-xl transition duration-200" href="#the-plan">Learn More</a></div>
+                    <p class="mb-6 note">We are a fully volunteer-driven organization, where the compliance and awareness related expenses are borne internally. Every bit of donation you give is spent on the children you sponsor.</p>
+                    <div>
+                      <a class="cta bg-pink-600 hover:bg-pink-700 mb-3 lg:mb-0 lg:mr-3 text-white" href="#your-support">Help a Child</a>
+                      <a class="cta bg-white hover:bg-gray-50" href="#the-plan">Learn More</a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -55,36 +58,39 @@
               <div class="w-full lg:w-1/2 mb-12 lg:mb-0">
                 <div class="max-w-md">
                   <span class="text-yellow-500 font-bold">our simple plan, explained 1-2-3</span>
-                  <h2 class="mb-2 text-4xl lg:text-5xl font-bold font-heading">How does this Work?</h2>
+                  <h2 class="mb-2">How does this Work?</h2>
                   <div class="max-w-xs">
-                    <p class="text-gray-500 leading-loose">SponsorMe acts as a bridge between the sponsor (i.e. you) and the children in need of assistance. We work with Child Welfare Centers and various NGO's to help at-risk children pursue quality education.</p>
+                    <p class="note">SponsorMe acts as a bridge between the sponsor (i.e. you) and the children in need of assistance. We work with Child Welfare Centers and various NGO's to help at-risk children pursue quality education.</p>
                   </div>
                 </div>
               </div>
               <div class="w-full lg:w-1/2">
                 <div class="mb-12 lg:mb-8 flex flex-wrap items-start">
-                  <span class="mb-4 lg:mb-0 lg:mr-6 inline-flex items-center justify-center w-16 h-16 bg-blue-100 rounded text-blue-600 text-2xl font-bold">1</span>
+                  <span class="steps bg-blue-100 text-blue-600">1</span>
                   <div class="w-full lg:w-3/4">
-                    <h3 class="mb-4 text-2xl font-bold font-heading">We Find</h3>
-                    <p class="text-gray-500 leading-loose">Currently, the children we support fall mostly into the following categories
-      Rescued from human trafficking
-      Rescued while begging on the streets
-      Orphans or orphaned as parents are unavailable/abusive
-      Staying in an orphanage as parents can't support</p>
+                    <h3 class="stephead">We Find</h3>
+                    <p class="note">Currently, the children we support fall mostly into the following categories
+                      <ul>
+                        <li>Rescued from human trafficking</li>
+                        <li>Rescued while begging on the streets</li>
+                        <li>Orphans or orphaned as parents are unavailable/abusive</li>
+                        <li>Staying in an orphanage as parents can't support</li>
+                      </ul>
+                    </p>
                   </div>
                 </div>
                 <div class="mb-12 lg:mb-8 flex flex-wrap items-start">
-                  <span class="mb-4 lg:mb-0 lg:mr-6 inline-flex items-center justify-center w-16 h-16 bg-pink-100 rounded text-pink-600 text-2xl font-bold">2</span>
+                  <span class="steps bg-pink-100 text-pink-600">2</span>
                   <div class="w-full lg:w-3/4">
-                    <h3 class="mb-4 text-2xl font-bold font-heading">You Help</h3>
-                    <p class="text-gray-500 leading-loose">As people like you come forward to help, we will have less and less children in our community who are deprived of education. Educate one child, and let's break the cycle of illiteracy, poverty and crime which gets propagated through generations. Please continue the assistance through the entire school years (10+2) of the child.</p>
+                    <h3 class="stephead">You Help</h3>
+                    <p class="note">As people like you come forward to help, we will have less and less children in our community who are deprived of education. Educate one child, and let's break the cycle of illiteracy, poverty and crime which gets propagated through generations. Please continue the assistance through the entire school years (10+2) of the child.</p>
                   </div>
                 </div>
                 <div class="flex flex-wrap items-start">
-                  <span class="mb-4 lg:mb-0 lg:mr-6 inline-flex items-center justify-center w-16 h-16 bg-purple-100 rounded text-purple-600 text-2xl font-bold">3</span>
+                  <span class="steps bg-purple-100 text-purple-600">3</span>
                   <div class="w-full lg:w-3/4">
-                    <h3 class="mb-4 text-2xl font-bold font-heading">They Prosper</h3>
-                    <p class="text-gray-500 leading-loose">Let's work towards the day where every child gains quality education, and has the right skills to pursue her dreams. Let's make sure a child isn't doomed to illiteracy and poverty, just because she wasn't as lucky as you and me in birth. Let's spread the good fortune we had that gave us the opportunity to learn and prosper.</p>
+                    <h3 class="stephead">They Prosper</h3>
+                    <p class="note">Let's work towards the day where every child gains quality education, and has the right skills to pursue her dreams. Let's make sure a child isn't doomed to illiteracy and poverty, just because she wasn't as lucky as you and me in birth. Let's spread the good fortune we had that gave us the opportunity to learn and prosper.</p>
                   </div>
                 </div>
               </div>
@@ -110,7 +116,7 @@
           <div class="container mx-auto px-4">
             <div class="mb-16 max-w-md mx-auto text-center">
               <span class="text-gray-400 font-bold">you know what can change the world for a child?</span>
-              <h2 class="text-4xl lg:text-5xl font-bold font-heading">Your Support</h2>
+              <h2>Your Support</h2>
             </div>
             <div class="flex flex-wrap -mx-3">
               <div class="mb-6 w-full lg:w-1/2 px-3">
@@ -123,7 +129,7 @@
                       </svg></a>
                   </div>
                   <div class="w-full lg:w-2/3">
-                    <h3 class="mb-1 text-2xl font-bold font-heading">Contact Details</h3>
+                    <h3 class="suphead">Contact Details</h3>
                     <p class="text-gray-500">
 +91 9880 77 11 77<br />
 hello@nilatrust.org</p>
@@ -139,7 +145,7 @@ hello@nilatrust.org</p>
                       </svg>
                   </div>
                   <div class="w-full lg:w-2/3">
-                    <h3 class="mb-1 text-2xl font-bold font-heading">Bank Account</h3>
+                    <h3 class="suphead">Bank Account</h3>
                     <p class="text-gray-500">
 Name : Nila Educational Trust, Type : Savings<br/>
 A/C# : 33848002975, IFSC: SBIN0040784</p>
@@ -154,7 +160,7 @@ A/C# : 33848002975, IFSC: SBIN0040784</p>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="h-8 w-8 md:w-12 md:h-12 text-blue-500" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path d="M17.726 13.02L14 16H9v-1h4.065a.5.5 0 0 0 .416-.777l-.888-1.332A1.995 1.995 0 0 0 10.93 12H3a1 1 0 0 0-1 1v6a2 2 0 0 0 2 2h9.639a3 3 0 0 0 2.258-1.024L22 13l-1.452-.484a2.998 2.998 0 0 0-2.822.504zm1.532-5.63c.451-.465.73-1.108.73-1.818s-.279-1.353-.73-1.818A2.447 2.447 0 0 0 17.494 3S16.25 2.997 15 4.286C13.75 2.997 12.506 3 12.506 3a2.45 2.45 0 0 0-1.764.753c-.451.466-.73 1.108-.73 1.818s.279 1.354.73 1.818L15 12l4.258-4.61z" fill="currentColor"></path></svg>
                   </a></div>
                   <div class="w-full lg:w-2/3">
-                    <h3 class="mb-1 text-2xl font-bold font-heading">Nila @ GiveIndia</h3>
+                    <h3 class="suphead">Nila @ GiveIndia</h3>
                     <p class="text-gray-500"><a href="https://fundraisers.giveindia.org/nonprofits/nila-educational-trust">Click here</a> for Nila page at GiveIndia</p>
                   </div>
                 </div>
@@ -167,7 +173,7 @@ A/C# : 33848002975, IFSC: SBIN0040784</p>
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="h-8 w-8 md:w-12 md:h-12 text-purple-500" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 512 512"><path d="M256 416c114.9 0 208-93.1 208-208S370.9 0 256 0S48 93.1 48 208s93.1 208 208 208zM233.8 97.4V80.6c0-9.2 7.4-16.6 16.6-16.6h11.1c9.2 0 16.6 7.4 16.6 16.6v17c15.5.8 30.5 6.1 43 15.4c5.6 4.1 6.2 12.3 1.2 17.1L306 145.6c-3.8 3.7-9.5 3.8-14 1c-5.4-3.4-11.4-5.1-17.8-5.1h-38.9c-9 0-16.3 8.2-16.3 18.3c0 8.2 5 15.5 12.1 17.6l62.3 18.7c25.7 7.7 43.7 32.4 43.7 60.1c0 34-26.4 61.5-59.1 62.4v16.8c0 9.2-7.4 16.6-16.6 16.6h-11.1c-9.2 0-16.6-7.4-16.6-16.6v-17c-15.5-.8-30.5-6.1-43-15.4c-5.6-4.1-6.2-12.3-1.2-17.1l16.3-15.5c3.8-3.7 9.5-3.8 14-1c5.4 3.4 11.4 5.1 17.8 5.1h38.9c9 0 16.3-8.2 16.3-18.3c0-8.2-5-15.5-12.1-17.6l-62.3-18.7c-25.7-7.7-43.7-32.4-43.7-60.1c.1-34 26.4-61.5 59.1-62.4zM480 352h-32.5c-19.6 26-44.6 47.7-73 64h63.8c5.3 0 9.6 3.6 9.6 8v16c0 4.4-4.3 8-9.6 8H73.6c-5.3 0-9.6-3.6-9.6-8v-16c0-4.4 4.3-8 9.6-8h63.8c-28.4-16.3-53.3-38-73-64H32c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32 32h448c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32z" fill="currentColor"></path></svg>
                   </a></div>
                   <div class="w-full lg:w-2/3">
-                    <h3 class="mb-2 text-2xl font-bold font-heading">Nila @ Syne</h3>
+                    <h3 class="suphead">Nila @ Syne</h3>
                     <p class="text-gray-500"><a href="https://www.syne.com/p/sponsor-education-for-a-child">Click here</a> for Nila page at Syne</p>
                   </div>
                 </div>
