--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <div class="w-full text-center lg:text-left">
                   <div class="max-w-md mx-auto lg:mx-0">
                     <h2 class="mb-3">
-                      <span>100% to the child</span>
-                      <span class="text-pink-600">not a penny</span>
-                      <span>to administration</span>
+                      <span>Fully volunteer-driven</span>
+                      <span class="text-pink-600">zero</span>
+                      <span>administration spend</span>
                     </h2>
                   </div>
                   <div class="max-w-sm mx-auto lg:mx-0">
