--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h2 class="mb-3">
                       <span>Fully volunteer-driven</span>
                       <span class="text-pink-600">zero</span>
-                      <span>administration spend</span>
+                      <span>admin spend</span>
                     </h2>
                   </div>
                   <div class="max-w-sm mx-auto lg:mx-0">
